syntax = "proto3";
package sf.v4;

// This proto schema is structured similarly to how geojson geometries are structured
// In this version, the coding of attributes IS taken into account by using struct.proto (for dynamic schema)

import "google/protobuf/struct.proto";

message Crs {
  uint32 srid = 1;
}

message Coordinate {
  double x = 1;
  double y = 2;
}

message Point { Coordinate coord = 1; }
message MultiPoint { repeated Point points = 1; }

message LineString { repeated Point points = 1; }
message MultiLineString { repeated LineString line_strings = 1; }

message LinearRing { repeated Coordinate coords = 1; }
message Polygon { repeated LinearRing rings = 1; }
message MultiPolygon { repeated Polygon polygons = 1; }

message Geometry {
  Crs crs = 1;

  oneof geom {
    Point point = 10;
    LineString line_string = 11;
    Polygon polygon = 12;
    MultiPolygon multipolygon = 13;
    MultiLineString multilinestring = 14;
    MultiPoint multipoint = 15;
  }
}

message Feature {
  Geometry geometry = 1;
  google.protobuf.Struct properties = 2;

  // GeoJSON Feature "id" (string or number in input; stored as string for simplicity)
  string id = 3;

  // GeoJSON Feature "bbox" (optional, typically 4 numbers; sometimes 6)
  repeated double bbox = 4;

  // Any other top-level keys outside {type, geometry, properties, id, bbox}
  google.protobuf.Struct extra = 5;
}


message FeatureCollection {
  // GeoJSON FeatureCollection.features
  repeated Feature features = 1;
  // GeoJSON FeatureCollection.bbox (optional)
  repeated double bbox = 2;
  // Any other top-level keys outside {type, features, bbox, name, crs}
  google.protobuf.Struct extra = 3;
  // GeoJSON FeatureCollection.name (optional)
  string name = 4;
  // Collection CRS (optional)
  Crs crs = 5;
}
